demos/k8s/session07/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-svc
spec:
  ports:
    - port: 8080
      targetPort: 80
      name: web
  selector:
    app: sample
    tech: dotnet
  type: ClusterIP
