demos/k8s/session07/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-node-svc
spec:
  ports:
    - port: 9100
      targetPort: 80
      nodePort: 31000
      name: web
  selector:
    app: sample
    tech: dotnet
  type: NodePort
